# .stack-work-

./: LICENSE  README.md  haskell-web-example-servant.cabal
src/: Lib.hs
