name:                haskell-web-example-servant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pravin-raha/haskell-web-example-servant#readme
license:             BSD3
license-file:        LICENSE
author:              Pravin Rahangdale
maintainer:          pravinrahangdale41@gmail.com
copyright:           2019 Pravin Rahangdale
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , containers
  default-language:    Haskell2010

executable haskell-web-example-servant-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-web-example-servant
  default-language:    Haskell2010

test-suite haskell-web-example-servant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-web-example-servant
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pravin-raha/haskell-web-example-servant
